deployments/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: remora
  namespace: remora
  labels:
    app: remora
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"  # For AWS
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:..."  # Add your SSL cert ARN
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 443
    targetPort: 8080
    protocol: TCP
  selector:
    app: remora
  sessionAffinity: None
